@@ -1,28 +1,27 @@
 /* XPM */
 static char *xpm_home_xpm[] = {
-"20 20 4 1",
+"18 18 5 1",
 " 	c None",
-"1	c #000000",
-"2	c #FF4949",
-"3	c #FFFF92",
-"                    ",
-"         11         ",
-"        1111        ",
-"       112211       ",
-"      11222211      ",
-"     1122222211     ",
-"    112222222211    ",
-"   11222222222211   ",
-"  1122222222222211  ",
-"  1111111111111111  ",
-"    133333333331    ",
-"    133333311131    ",
-"    133111311131    ",
-"    133111311131    ",
-"    133111333331    ",
-"    133111333331    ",
-"    133111333331    ",
-"    111111111111    ",
-"                    ",
-"                    "
+"1	c #FFFFFF",
+"2	c #000000",
+"3	c #FFB650",
+"4	c #FF0000",
+"                  ",
+"        22        ",
+"       2332222    ",
+"      23443212    ",
+"     234444312    ",
+"    2344224432    ",
+"   234421124432   ",
+"  23442111124432  ",
+" 2344211111124432 ",
+"234421111111124432",
+" 2421111221111242 ",
+"  22111244211122  ",
+"   211124321112   ",
+"   211124321112   ",
+"   211124321112   ",
+"   211124321112   ",
+"   222222222222   ",
+"                  "
 };
