@@ -46,6 +46,7 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* Makefiles now honor DESTDIR
 	* Shift+Enter while pasting swaps clipboard with canvas (see handbook section 4.8)
 	* Communal memory space now implemented for layers (see handbook section 8.4.3)
+	* Support using ImageMagick for GIF animation, instead of Gifsicle - "./configure imagick"
 	* BUGFIX - Polygon line selection now clearer in Windows version
 	* BUGFIX - Occasional redraw glitches in paste and gradient previews eliminated
 	* BUGFIX - "Remove All Layers" with layers window closed doesn't cause crash
